--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,22 +19,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  provider: ^4.0.1
-  shared_preferences: ^0.5.10
-  flutter_icons: ^1.1.0
-  xml2json: ^4.3.0
-  fluttertoast: ^7.0.2
-  esys_flutter_share: ^1.0.2
-  cached_network_image: ^2.5.1
-  uuid: ^2.2.0
-  objectdb: ^1.0.7+1
-  epub_viewer: ^0.1.8
-  path_provider: ^1.4.0
-  dio: ^3.0.9
-  permission_handler: ^4.2.0+hotfix.1
-  google_fonts: ^1.1.0
-  flutter_spinkit: ^4.1.2+1
+  cupertino_icons: ^1.0.2
+  provider: ^6.0.0
+  shared_preferences: ^2.0.8
+  flutter_icons:
+    git: https://github.com/jibiel/flutter-icons
+  xml2json: ^5.3.1
+  fluttertoast: ^8.0.8
+  share: ^2.0.4
+  cached_network_image: ^3.1.0
+  uuid: ^3.0.4
+  objectdb: ^1.2.1+1
+  path_provider: ^2.0.5
+  dio: ^4.0.0
+  epub_view: ^2.2.0
+  permission_handler: ^8.1.6
+  google_fonts: ^2.1.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -49,3 +50,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/
